--- a/test/logpipe_case1_collector.conf
+++ b/test/logpipe_case1_collector.conf
@@ -9,7 +9,11 @@
 	] ,
 	"rotate" :
 	{
-		"file_rotate_max_size" : -1
+		"file_rotate_max_size" : 0
+	} ,
+	"comm" :
+	{
+		"compress_algorithm" : "deflate"
 	} ,
 	"log" : 
 	{
