--- a/test/logpipe_case2_collector.conf
+++ b/test/logpipe_case2_collector.conf
@@ -6,11 +6,15 @@
 	"outputs" : 
 	[
 	{ "output" : "tcp://127.0.0.1:10101" } ,
-	{ "output" : "file://home/calvin/log2" }
+	{ "output" : "file://home/calvin/log12" }
 	] ,
 	"rotate" :
 	{
-		"file_rotate_max_size" : -1
+		"file_rotate_max_size" : 0
+	} ,
+	"comm" :
+	{
+		"compress_algorithm" : "deflate"
 	} ,
 	"log" : 
 	{
