--- a/test/logpipe_case1_collector.conf
+++ b/test/logpipe_case1_collector.conf
@@ -1,20 +1,23 @@
 {
 	"inputs" : 
 	[
-	{ "input" : "file://home/calvin/log" }
+		"logpipe-input-file.so" : { "path":"/home/calvin/log" , "file":"*.log" , "rotate_max_size":0 }
 	] ,
+	
+	"filters" :
+	[
+	] ,
+	
+	"codecs" :
+	[
+		"logpipe-codec-compress.so" : { "algorithm":"deflate" }
+	] ,
+	
 	"outputs" : 
 	[
-	{ "output" : "tcp://127.0.0.1:10101" }
+		"logpipe-output-tcp.so" : { "ip":"127.0.0.1" , "port":10101 }
 	] ,
-	"rotate" :
-	{
-		"file_rotate_max_size" : 0
-	} ,
-	"comm" :
-	{
-		"compress_algorithm" : "deflate"
-	} ,
+	
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_collector.log" ,
