--- a/test/logpipe_case1_dump.conf
+++ b/test/logpipe_case1_dump.conf
@@ -1,20 +1,14 @@
 {
 	"inputs" : 
 	[
-	{ "input" : "tcp://127.0.0.1:10101" }
+		"logpipe-input-tcp.so" : { "ip":"127.0.0.1" , "port":10101 }
 	] ,
+	
 	"outputs" : 
 	[
-	{ "output" : "file://home/calvin/log3" }
+		"logpipe-output-file.so" : { "path":"/home/calvin/log3" , "rotate_max_size":0 , "compress_algorithm":"deflate" }
 	] ,
-	"rotate" :
-	{
-		"file_rotate_max_size" : 0
-	} ,
-	"comm" :
-	{
-		"compress_algorithm" : "deflate"
-	} ,
+	
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_dump.log" ,
