Refactoring code to plugin framework

--- a/test/logpipe_case1_collector.conf
+++ b/test/logpipe_case1_collector.conf
@@ -1,26 +1,17 @@
 {
-	"inputs" : 
-	[
-		"logpipe-input-file.so" : { "path":"/home/calvin/log" , "file":"*.log" , "rotate_max_size":0 }
-	] ,
-	
-	"filters" :
-	[
-	] ,
-	
-	"codecs" :
-	[
-		"logpipe-codec-compress.so" : { "algorithm":"deflate" }
-	] ,
-	
-	"outputs" : 
-	[
-		"logpipe-output-tcp.so" : { "ip":"127.0.0.1" , "port":10101 }
-	] ,
-	
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_collector.log" ,
 		"log_level" : "DEBUG"
-	}
+	} ,
+	
+	"inputs" : 
+	[
+		{ "plugin":"etc/logpipe-input-file.so" , "path":"/home/calvin/log" , "compress_algorithm":"deflate" }
+	] ,
+	
+	"outputs" : 
+	[
+		{ "plugin":"etc/logpipe-output-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
+	]
 }
