--- a/test/logpipe_case1_dump.conf
+++ b/test/logpipe_case1_dump.conf
@@ -1,17 +1,17 @@
 {
-	"inputs" : 
-	[
-		"logpipe-input-tcp.so" : { "ip":"127.0.0.1" , "port":10101 }
-	] ,
-	
-	"outputs" : 
-	[
-		"logpipe-output-file.so" : { "path":"/home/calvin/log3" , "rotate_max_size":0 , "compress_algorithm":"deflate" }
-	] ,
-	
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_dump.log" ,
 		"log_level" : "DEBUG"
-	}
+	} ,
+	
+	"inputs" : 
+	[
+		{ "plugin":"etc/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
+	] ,
+	
+	"outputs" : 
+	[
+		{ "plugin":"etc/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" }
+	]
 }
