--- a/src/makefile
+++ b/src/makefile
@@ -8,29 +8,33 @@
 ###### 源文件配置区
 #@ c_FILE
 c_FILE		=	\
-			IDL_logpipe_conf.dsc.c \
-			fasterjson.c \
-			list.c \
-			rbtree.c \
-			rbtree_ins.c \
-			LOGC.c \
-			util.c \
 			main.c \
-			config.c \
-			env.c \
 			monitor.c \
 			worker.c \
-			file.c \
-			comm.c \
+
+c_FILE2		=	\
+			list.c \
+			rbtree.c \
+			fasterjson.c \
+			LOGC.c \
+			config.c \
+			env.c \
+			util.c \
 			output.c \
 
 ###### 目标文件、安装目录配置区
 include makeinstall
 BIN		=	logpipe
 BININST		=	$(_BININST)
+LIB		=	liblogpipe_api.so
+LIBINST		=	$(_LIBINST)
 HDER		= \
+			rbtree.h \
 			LOGC.h \
-			logpipe_in.h \
+			rbtree_tpl.h \
+			logpipe_api.h \
+
+HDERINST	=	$(_HDERINST)
 
 ###### 编译选项
 CFLAGS		=	$(_CFLAGS) \
@@ -38,6 +42,7 @@ CFLAGS		=	$(_CFLAGS) \
 
 ###### 链接选项
 LFLAGS		=	$(_LFLAGS) \
+			-ldl \
 			-lz \
 
 ###### 额外宏定义区
@@ -53,6 +58,9 @@ CLEAN_ADDITION	=
 include $(MKTPLDIR)/makeobj_$(MKTPLOS).inc
 
 ###### 目标文件依赖关系
-logpipe		:	$(c_FILE_o)
-	$(CC) -o $@ $(c_FILE_o) $(LFLAGS)
+logpipe		:	$(c_FILE_o) liblogpipe_api.so
+	$(CC) -o $@ $(c_FILE_o) $(LFLAGS) -llogpipe_api
+
+liblogpipe_api.so	:	$(c_FILE2_o)
+	$(CC) -o $@ $(c_FILE2_o) $(SOFLAGS) $(LFLAGS)
 
