--- a/conf/logpipe_case1_dump.conf
+++ b/conf/logpipe_case1_dump.conf
@@ -7,11 +7,11 @@
 	
 	"inputs" : 
 	[
-		{ "plugin":"etc/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
+		{ "plugin":"so/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
 	] ,
 	
 	"outputs" : 
 	[
-		{ "plugin":"etc/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" }
+		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" }
 	]
 }
