--- a/conf/logpipe_case2_collector.conf
+++ b/conf/logpipe_case2_collector.conf
@@ -1,24 +1,18 @@
 {
-	"inputs" : 
-	[
-	{ "input" : "file://home/calvin/log" }
-	] ,
-	"outputs" : 
-	[
-	{ "output" : "tcp://127.0.0.1:10101" } ,
-	{ "output" : "file://home/calvin/log12" }
-	] ,
-	"rotate" :
-	{
-		"file_rotate_max_size" : 0
-	} ,
-	"comm" :
-	{
-		"compress_algorithm" : "deflate"
-	} ,
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case2_collector.log" ,
 		"log_level" : "DEBUG"
-	}
+	} ,
+	
+	"inputs" : 
+	[
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "compress_algorithm":"deflate" }
+	] ,
+	
+	"outputs" : 
+	[
+		{ "plugin":"so/logpipe-output-tcp.so" , "ip":"127.0.0.1" , "port":10101 } ,
+		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log2" , "uncompress_algorithm":"deflate" }
+	]
 }
