--- a/conf/logpipe_case2_forward.conf
+++ b/conf/logpipe_case2_forward.conf
@@ -1,23 +1,17 @@
 {
-	"inputs" : 
-	[
-	{ "input" : "tcp://127.0.0.1:10101" }
-	] ,
-	"outputs" : 
-	[
-	{ "output" : "tcp://127.0.0.1:10102" }
-	] ,
-	"rotate" :
-	{
-		"file_rotate_max_size" : 0
-	} ,
-	"comm" :
-	{
-		"compress_algorithm" : "deflate"
-	} ,
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case2_forward.log" ,
 		"log_level" : "DEBUG"
-	}
+	} ,
+	
+	"inputs" : 
+	[
+		{ "plugin":"so/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
+	] ,
+	
+	"outputs" : 
+	[
+		{ "plugin":"so/logpipe-output-tcp.so" , "ip":"127.0.0.1" , "port":10102 }
+	]
 }
