--- a/src/makefile
+++ b/src/makefile
@@ -55,8 +55,12 @@ CLEAN_ADDITION	=
 #@ make_clean
 #@ make_install
 #@ make_install_BININST
+#@ make_install_LIBINST
+#@ make_install_HDERINST
 #@ make_uninstall
 #@ make_uninstall_BININST
+#@ make_uninstall_LIBINST
+#@ make_uninstall_HDERINST
 include $(MKTPLDIR)/makeobj_$(MKTPLOS).inc
 
 ###### 目标文件依赖关系
