--- a/conf/logpipe_case2_forward.conf
+++ b/conf/logpipe_case2_forward.conf
@@ -2,7 +2,7 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case2_forward.log" ,
-		"log_level" : "DEBUG"
+		"log_level" : "INFO"
 	} ,
 	
 	"inputs" : 
