--- a/conf/logpipe_case1_collector.conf
+++ b/conf/logpipe_case1_collector.conf
@@ -2,12 +2,12 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_collector.log" ,
-		"log_level" : "INFO"
+		"log_level" : "WARN"
 	} ,
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "compress_algorithm":"deflate" }
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" }
 	] ,
 	
 	"outputs" : 
