--- a/conf/logpipe_case1_collector.conf
+++ b/conf/logpipe_case1_collector.conf
@@ -2,7 +2,7 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_collector.log" ,
-		"log_level" : "WARN"
+		"log_level" : "INFO"
 	} ,
 	
 	"inputs" : 
