--- a/conf/logpipe_case2_dump.conf
+++ b/conf/logpipe_case2_dump.conf
@@ -12,6 +12,6 @@
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" }
+		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" , "rotate_size":20 , "exec_after_rotating":"echo \"AFTER ROTATING ${LOGPIPE_ROTATING_NEW_FILENAME}\">>/tmp/logpipe_case2_collector.log" }
 	]
 }
