--- a/conf/logpipe_case1_dump.conf
+++ b/conf/logpipe_case1_dump.conf
@@ -2,7 +2,7 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_dump.log" ,
-		"log_level" : "INFO"
+		"log_level" : "DEBUG"
 	} ,
 	
 	"inputs" : 
@@ -12,6 +12,7 @@
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" }
+		// { "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" }
+		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" }
 	]
 }
