--- a/conf/logpipe_case1_collector.conf
+++ b/conf/logpipe_case1_collector.conf
@@ -2,13 +2,13 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case1_collector.log" ,
-		"log_level" : "DEBUG"
+		"log_level" : "INFO"
 	} ,
 	
 	"inputs" : 
 	[
-		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" }
-		{ "plugin":"so/logpipe-input-exec.so" , "cmd":"tail -F /home/calvin/log/a.log" , "compress_algorithm":"deflate" , "output_filename":"my_filename.log" }
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" }
+		// { "plugin":"so/logpipe-input-exec.so" , "cmd":"tail -F /home/calvin/log/a.log" , "compress_algorithm":"deflate" , "output_filename":"my_filename.log" }
 	] ,
 	
 	"outputs" : 
