modify src-plugins/logpipe-output-hdfs.c but not test

--- a/conf/logpipe_case3_output_hdfs.conf
+++ b/conf/logpipe_case3_output_hdfs.conf
@@ -12,6 +12,6 @@
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-hdfs.so" , "name_node":"192.168.6.21" , "port":9866 , "path":"/log" }
+		{ "plugin":"so/logpipe-output-hdfs.so" , "name_node":"192.168.6.21" , "port":9000 , "user":"hdfs" , "path":"/log/%Y%M%D" }
 	]
 }
