--- a/src-plugins/makefile
+++ b/src-plugins/makefile
@@ -38,7 +38,7 @@ LFLAGS		=	$(_LFLAGS) \
 			-rdynamic \
 
 ###### 额外宏定义区
-CLEAN_ADDITION	=
+CLEAN_ADDITION	=	logpipe-output-hdfs.so \
 
 ###### 加载mktpl模板库
 #@ make_all
@@ -67,12 +67,12 @@ logpipe-output-tcp.so		:	logpipe-output-tcp.o
 logpipe-input-exec.so		:	logpipe-input-exec.o
 	$(CC) -o $@ logpipe-input-exec.o $(SOFLAGS) $(LFLAGS)
 
-CFLAGS_hdfs			=	$(CFLAGS) -I/home/hdfs/hadoop/include
+CFLAGS_hdfs			=	$(CFLAGS) -I/home/hdfs/expack/hadoop/include
 
 logpipe-output-hdfs.o		:	logpipe-output-hdfs.c
 	$(CC) $(CFLAGS_hdfs) -c logpipe-output-hdfs.c
 
-LFLAGS_hdfs			=	$(LFLAGS) -L/home/hdfs/hadoop/lib/native -lhdfs -L$(HOME)/expack/jdk1.8.0_152/jre/lib/amd64/server -ljvm
+LFLAGS_hdfs			=	$(LFLAGS) -L/home/hdfs/expack/hadoop/lib/native -lhdfs -L$(HOME)/expack/jdk1.8.0_152/jre/lib/amd64/server -ljvm
 
 logpipe-output-hdfs.so		:	logpipe-output-hdfs.o
 	$(CC) -o $@ logpipe-output-hdfs.o $(SOFLAGS) $(LFLAGS_hdfs)
