--- a/src-plugins/makefile.Linux
+++ b/src-plugins/makefile.Linux
@@ -35,6 +35,7 @@ c_FILE		=	\
 			logpipe-input-tcp.c \
 			logpipe-output-tcp.c \
 			logpipe-input-exec.c \
+			logpipe-output-hdfs.c \
 
 ###### 目标文件、安装目录配置区
 include makeinstall
@@ -59,7 +60,7 @@ LFLAGS		=	$(_LFLAGS) \
 			-rdynamic \
 
 ###### 额外宏定义区
-CLEAN_ADDITION	=
+CLEAN_ADDITION	=	logpipe-output-hdfs.so \
 
 ###### 加载mktpl模板库
 # 最终目标列表
@@ -203,4 +204,14 @@ logpipe-output-tcp.so		:	logpipe-output-tcp.o
 
 logpipe-input-exec.so		:	logpipe-input-exec.o
 	$(CC) -o $@ logpipe-input-exec.o $(SOFLAGS) $(LFLAGS)
+
+CFLAGS_hdfs			=	$(CFLAGS) -I/home/hdfs/hadoop/include
+
+logpipe-output-hdfs.o		:	logpipe-output-hdfs.c
+	$(CC) $(CFLAGS_hdfs) -c logpipe-output-hdfs.c
+
+LFLAGS_hdfs			=	$(LFLAGS) -L/home/hdfs/hadoop/lib/native -lhdfs -L$(HOME)/expack/jdk1.8.0_152/jre/lib/amd64/server -ljvm
+
+logpipe-output-hdfs.so		:	logpipe-output-hdfs.o
+	$(CC) -o $@ logpipe-output-hdfs.o $(SOFLAGS) $(LFLAGS_hdfs)
 
