--- a/src/makefile.Linux
+++ b/src/makefile.Linux
@@ -15,8 +15,8 @@ SOFLAGS		=	-shared
 ESOFLAGS	=	
 
 # c源代码文件宏及推导规则
-CC		=	gcc -g -fPIC -O2 -Wall -Werror -fno-strict-aliasing -std=gnu99
-CC_NOWARN	=	gcc -g -fPIC -O2 -std=gnu99
+CC		=	gcc -g -fPIC -O2 -Wall -Werror -fno-strict-aliasing
+CC_NOWARN	=	gcc -g -fPIC -O2
 
 c_FILE_o	=	$(c_FILE:.c=.o)
 c_FILE2_o	=	$(c_FILE2:.c=.o)
