--- a/conf/logpipe_case4_output_ek.conf
+++ b/conf/logpipe_case4_output_ek.conf
@@ -7,11 +7,13 @@
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "file":"cpu_monitor.log" }
+		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "file":"cpu_monitor.log" }
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/dep_lhh/log" , "file":"event.log" }
 	] ,
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-ek.so" , "output_template":"{ \"trans_date\":\"$1\" \"trans_time\":\"$2\" , \"usr\":$3 , \"sys\":$4 , \"iowait\":$5 , \"idle\":$6 }" , "ip":"192.168.6.21" , "port":9200 , "index":"cpu_monitor" , "type":"cpu" }
+		// { "plugin":"so/logpipe-output-ek.so" , "output_template":"{ \"trans_date\":\"$1\" \"trans_time\":\"$2\" , \"usr\":$3 , \"sys\":$4 , \"iowait\":$5 , \"idle\":$6 }" , "ip":"192.168.6.21" , "port":9200 , "index":"cpu_monitor" , "type":"cpu" }
+		{ "plugin":"so/logpipe-output-ek.so" , "translate_charset":"[]" , "output_template":"{ \"trans_date\":\"$1\",\"trans_time\":\"$2\" , \"source_channel\":\"$11\",\"source_netaddr\":\"$12\",\"dest_netaddr\":\"$6\" , \"comm_app_code\":\"$13\",\"comm_app_desc\":\"\",\"comm_status_code\":\"$15\" , \"total_elapse\":$18,\"keepalive_elapse\":$19,\"comm_recv_elapse\":$20,\"app_elapse\":$21,\"comm_send_elapse\":$22,\"somain_elapse\":$23 }" , "ip":"127.0.0.1" , "port":9200 , "index":"ecif" , "type":"event_log" }
 	]
 }
