--- a/conf/logpipe_case4_output_ek.conf
+++ b/conf/logpipe_case4_output_ek.conf
@@ -7,13 +7,13 @@
 	
 	"inputs" : 
 	[
-		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "file":"cpu_monitor.log" }
-		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/dep_lhh/log" , "file":"event.log" }
+		{ "plugin":"so/logpipe-input-exec.so" , "cmd":"while [ 1 ] ; do echo `date +'%Y-%m-%d %H:%M:%S'` `vmstat 1 2 | tail -1 | awk '{printf \"%d %d %d %d\",$13,$14,$16,$15}'` `free | head -2 | tail -1 | awk '{printf \"%d %d %d\",$3,$6,$4 }'` `iostat -d 1 2 | grep -w sda | tail -1 | awk '{printf \"%f %f %f %f\",$4,$5,$6,$7}'` `sar -n DEV 1 2 | grep -w ens33 | head -2 | tail -1 | awk '{printf \"%f %f %f %f\",$3,$4,$5,$6}'`; sleep 1 ; done" , "output_filename":"system_monitor" }
+		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/dep_lhh/log" , "file":"event.log" }
 	] ,
 	
 	"outputs" : 
 	[
-		// { "plugin":"so/logpipe-output-ek.so" , "output_template":"{ \"trans_date\":\"$1\" \"trans_time\":\"$2\" , \"usr\":$3 , \"sys\":$4 , \"iowait\":$5 , \"idle\":$6 }" , "ip":"192.168.6.21" , "port":9200 , "index":"cpu_monitor" , "type":"cpu" }
-		{ "plugin":"so/logpipe-output-ek.so" , "translate_charset":"[]" , "output_template":"{ \"trans_date\":\"$1\",\"trans_time\":\"$2\" , \"source_channel\":\"$11\",\"source_netaddr\":\"$12\",\"dest_netaddr\":\"$6\" , \"comm_app_code\":\"$13\",\"comm_app_desc\":\"\",\"comm_status_code\":\"$15\" , \"total_elapse\":$18,\"keepalive_elapse\":$19,\"comm_recv_elapse\":$20,\"app_elapse\":$21,\"comm_send_elapse\":$22,\"somain_elapse\":$23 }" , "ip":"127.0.0.1" , "port":9200 , "index":"ecif" , "type":"event_log" }
+		{ "plugin":"so/logpipe-output-ek.so" , "output_template":"{ \"trans_date\":\"$1\",\"trans_time\":\"$2\" , \"cpu_usr\":$3,\"cpu_sys\":$4,\"cpu_iowait\":$5,\"cpu_idle\":$6 , \"mem_used\":$7,\"mem_buffer_and_cache\":$8,\"mem_free\":$9 , \"disk_r_s\":$10,\"disk_w_s\":$11,\"disk_rKB_s\":$12,\"disk_wKB_s\":$13 , \"net_rPCK_s\":$14,\"net_wPCK_s\":$15,\"net_rKB_s\":$16,\"net_wKB_s\":$17 }" , "ip":"192.168.6.21" , "port":9200 , "index":"system_monitor" , "type":"data" }
+		// { "plugin":"so/logpipe-output-ek.so" , "translate_charset":"[]" , "output_template":"{ \"trans_date\":\"$1\",\"trans_time\":\"$2\" , \"source_channel\":\"$11\",\"source_netaddr\":\"$12\",\"dest_netaddr\":\"$6\" , \"comm_app_code\":\"$13\",\"comm_app_desc\":\"\",\"comm_status_code\":\"$15\" , \"total_elapse\":$18,\"keepalive_elapse\":$19,\"comm_recv_elapse\":$20,\"app_elapse\":$21,\"comm_send_elapse\":$22,\"somain_elapse\":$23 }" , "ip":"127.0.0.1" , "port":9200 , "index":"ecif" , "type":"event_log" }
 	]
 }
