--- a/conf/logpipe_case1_collector.conf
+++ b/conf/logpipe_case1_collector.conf
@@ -8,7 +8,7 @@
 	"inputs" : 
 	[
 		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" }
-		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/dep_lihua/log" , "file":"a*.log" }
+		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "files":"*.log" , "exclude_files":"event.log" }
 		// { "plugin":"so/logpipe-input-exec.so" , "cmd":"tail -F /home/calvin/log/a.log" , "compress_algorithm":"deflate" , "output_filename":"my_filename.log" }
 	] ,
 	
