--- a/conf/logpipe_case1_collector.conf
+++ b/conf/logpipe_case1_collector.conf
@@ -14,6 +14,6 @@
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
+		{ "plugin":"so/logpipe-output-tcp.so" , "ip":"127.0.0.1","port":10101 , "ip2":"127.0.0.1","port2":10102 }
 	]
 }
