--- a/conf/logpipe_case1_3_intput_tcp_and_output_file.conf
+++ b/conf/logpipe_case1_3_intput_tcp_and_output_file.conf
@@ -1,13 +1,13 @@
 {
 	"log" : 
 	{
-		"log_file" : "/tmp/logpipe_case1_dump.log" ,
+		"log_file" : "/tmp/logpipe_case1_3_intput_tcp_and_output_file.log" ,
 		"log_level" : "DEBUG"
 	} ,
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
+		{ "plugin":"so/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10103 }
 	] ,
 	
 	"outputs" : 
