--- a/conf/logpipe_case2_input_tcp_and_output_file.conf
+++ b/conf/logpipe_case2_input_tcp_and_output_file.conf
@@ -1,7 +1,7 @@
 {
 	"log" : 
 	{
-		"log_file" : "/tmp/logpipe_case2_dump.log" ,
+		"log_file" : "/tmp/logpipe_case2_input_tcp_and_output_file.log" ,
 		"log_level" : "INFO"
 	} ,
 	
