--- a/conf/logpipe_case2_input_file_and_output_tcp.conf
+++ b/conf/logpipe_case2_input_file_and_output_tcp.conf
@@ -2,17 +2,18 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case2_input_file_and_output_tcp.log" ,
-		"log_level" : "INFO"
+		"log_level" : "DEBUG"
 	} ,
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "exec_before_rotating":"echo \"BEFORE ROTATING ${LOGPIPE_ROTATING_OLD_FILENAME}\">>/tmp/logpipe_case2_collector.log" , "rotate_size":10 , "exec_after_rotating":"echo \"AFTER ROTATING ${LOGPIPE_ROTATING_NEW_FILENAME}\">>/tmp/logpipe_case2_collector.log" , "compress_algorithm":"deflate" }
+		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "exec_before_rotating":"echo \"BEFORE ROTATING ${LOGPIPE_ROTATING_OLD_FILENAME}\">>/tmp/logpipe_case2_collector.log" , "rotate_size":10 , "exec_after_rotating":"echo \"AFTER ROTATING ${LOGPIPE_ROTATING_NEW_FILENAME}\">>/tmp/logpipe_case2_collector.log" , "compress_algorithm":"deflate" }
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "rotate_size":10000000 }
 	] ,
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-tcp.so" , "ip":"127.0.0.1" , "port":10101 } ,
-		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log2" , "uncompress_algorithm":"deflate" }
+		{ "plugin":"so/logpipe-output-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
+		// { "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log2" , "uncompress_algorithm":"deflate" }
 	]
 }
