--- a/conf/logpipe_case2_input_tcp_and_output_file.conf
+++ b/conf/logpipe_case2_input_tcp_and_output_file.conf
@@ -2,16 +2,18 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case2_input_tcp_and_output_file.log" ,
-		"log_level" : "INFO"
+		"log_level" : "DEBUG"
 	} ,
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10102 }
+		// { "plugin":"so/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10102 }
+		{ "plugin":"so/logpipe-input-tcp.so" , "ip":"127.0.0.1" , "port":10101 }
 	] ,
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" , "rotate_size":20 , "exec_after_rotating":"echo \"AFTER ROTATING ${LOGPIPE_ROTATING_NEW_FILENAME}\">>/tmp/logpipe_case2_collector.log" }
+		// { "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" , "rotate_size":20 , "exec_after_rotating":"echo \"AFTER ROTATING ${LOGPIPE_ROTATING_NEW_FILENAME}\">>/tmp/logpipe_case2_collector.log" }
+		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "rotate_size":10000000 }
 	]
 }
