--- a/src-plugins/makefile.Linux
+++ b/src-plugins/makefile.Linux
@@ -15,8 +15,8 @@ SOFLAGS		=	-shared
 ESOFLAGS	=	
 
 # c源代码文件宏及推导规则
-CC		=	gcc -g -fPIC -O2 -Wall -Werror -fno-strict-aliasing
-CC_NOWARN	=	gcc -g -fPIC -O2
+CC		=	gcc -g -fPIC -O2 -Wall -Werror -fno-strict-aliasing -std=gnu99
+CC_NOWARN	=	gcc -g -fPIC -O2 -std=gnu99
 
 c_FILE_o	=	$(c_FILE:.c=.o)
 c_FILE2_o	=	$(c_FILE2:.c=.o)
@@ -46,6 +46,7 @@ LIB		=	\
 			logpipe-input-tcp.so \
 			logpipe-output-tcp.so \
 			logpipe-input-exec.so \
+			logpipe-output-ek.so \
 
 LIBINST		=	$(_LIBINST)
 
@@ -63,7 +64,6 @@ LFLAGS		=	$(_LFLAGS) \
 ###### 额外宏定义区
 CLEAN_ADDITION	=	logpipe-output-hdfs.so \
 			fasterhttp.o \
-			logpipe-output-ek.so \
 
 ###### 加载mktpl模板库
 # 最终目标列表
