--- a/conf/logpipe_case2_input_tcp_and_output_file.conf
+++ b/conf/logpipe_case2_input_tcp_and_output_file.conf
@@ -14,6 +14,6 @@
 	"outputs" : 
 	[
 		// { "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "uncompress_algorithm":"deflate" , "rotate_size":20 , "exec_after_rotating":"echo \"AFTER ROTATING ${LOGPIPE_ROTATING_NEW_FILENAME}\">>/tmp/logpipe_case2_collector.log" }
-		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" , "rotate_size":10000000 }
+		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" }
 	]
 }
