--- a/conf/logpipe_case6_input_file_and_output_kafka.conf
+++ b/conf/logpipe_case6_input_file_and_output_kafka.conf
@@ -12,6 +12,6 @@
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-kafka.so" , "brokers":"127.0.0.1:9092" , "topic":"test_topic" }
+		{ "plugin":"so/logpipe-output-kafka.so" , "bootstrap_servers":"127.0.0.1:9092" , "topic":"test_topic" }
 	]
 }
