--- a/conf/logpipe_case0_input_file_and_output_file.conf
+++ b/conf/logpipe_case0_input_file_and_output_file.conf
@@ -7,11 +7,12 @@
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "rotate_size":10000000 , "exec_after_rotating":"ps -f -u calvin | grep -w test_press_noclose | awk '{print $2}' | xargs kill -USR1" }
+		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/calvin/log" , "rotate_size":10000000 , "exec_after_rotating":"ps -f -u calvin | grep -w test_press_noclose | awk '{print $2}' | xargs kill -USR1" }
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/nhx_lhh/log" , "exclude_files":"*.log.*" }
 	] ,
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/calvin/log3" }
+		{ "plugin":"so/logpipe-output-file.so" , "path":"/home/nhx_lhh/log3" }
 	]
 }
