--- a/src/makefile.Linux
+++ b/src/makefile.Linux
@@ -78,6 +78,9 @@ CLEAN_ADDITION	=
 # 最终目标列表
 all	:	$(OBJ) $(OBJ2) $(LIB) $(LIB2) $(SQL) $(NOINST_OBJ) $(BIN) $(BIN2)
 
+prepro_all	:	$(PREPRO)
+
+
 # 文件系统宏
 CD		=	cd
 RM		=	rm -f
