--- a/src-plugins/makefile.Linux
+++ b/src-plugins/makefile.Linux
@@ -38,6 +38,7 @@ c_FILE		=	\
 			logpipe-output-hdfs.c \
 			logpipe-output-ek.c \
 			logpipe-output-kafka.c \
+			logpipe-output-ingeek.c \
 
 ###### 目标文件、安装目录配置区
 include makeinstall
@@ -66,6 +67,7 @@ LFLAGS		=	$(_LFLAGS) \
 CLEAN_ADDITION	=	fasterhttp.o \
 			logpipe-output-hdfs.so \
 			logpipe-output-kafka.so \
+			logpipe-output-ingeek.so \
 
 ###### 加载mktpl模板库
 # 最终目标列表
@@ -208,4 +210,7 @@ LFLAGS_kafka			=	$(LFLAGS) -L$(HOME)/lib -lrdkafka
 
 logpipe-output-kafka.so		:	logpipe-output-kafka.o
 	$(CC) -o $@ logpipe-output-kafka.o $(SOFLAGS) $(LFLAGS_kafka)
+
+logpipe-output-ingeek.so	:	logpipe-output-ingeek.o
+	$(CC) -o $@ logpipe-output-ingeek.o $(SOFLAGS) $(LFLAGS)
 
