add logpipe-output-ingeek.so auto-build to src-plugins/makefile

--- a/src-plugins/makefile
+++ b/src-plugins/makefile
@@ -27,6 +27,7 @@ LIB		=	\
 			logpipe-output-tcp.so \
 			logpipe-input-exec.so \
 			logpipe-output-ek.so \
+			logpipe-output-ingeek.so \
 
 LIBINST		=	$(_LIBINST)
 
