--- a/conf/logpipe_case7_input_file_and_output_ingeek.conf
+++ b/conf/logpipe_case7_input_file_and_output_ingeek.conf
@@ -12,6 +12,6 @@
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-ingeek.so" , "ip":"127.0.0.1" , "port":9527 , "path":"/home/nhx_log" }
+		{ "plugin":"so/logpipe-output-ingeek.so" , "ip":"127.0.0.1" , "port":9527 , "path":"/home/nhx_lhh/log" }
 	]
 }
