--- a/conf/logpipe_case7_input_file_and_output_ingeek.conf
+++ b/conf/logpipe_case7_input_file_and_output_ingeek.conf
@@ -2,7 +2,7 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/logpipe_case7_input_file_and_output_ingeek.log" ,
-		"log_level" : "INFO"
+		"log_level" : "DEBUG"
 	} ,
 	
 	"inputs" : 
