--- a/conf/logpipe_case7_input_file_and_output_ingeek.conf
+++ b/conf/logpipe_case7_input_file_and_output_ingeek.conf
@@ -1,7 +1,7 @@
 {
 	"log" : 
 	{
-		"log_file" : "/tmp/logpipe_case7_input_file_and_output_ingeek.log" ,
+		"log_file" : "/tmp/nhx_lhh_logpipe_case7_input_file_and_output_ingeek.log" ,
 		"log_level" : "DEBUG"
 	} ,
 	
@@ -12,7 +12,7 @@
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-ingeek.so" , "ip":"158.1.0.48" , "port":5142 , "path":"/home/nhx_lhh/log" }
+		{ "plugin":"so/logpipe-output-ingeek.so" , "ip":"158.1.0.48" , "port":5142 , "path":"/home/nhx_lhh/log" , "key":"press3" }
 		// { "plugin":"so/logpipe-output-ingeek.so" , "ip":"66.88.1.68" , "port":5142 , "path":"/home/nhx_lhh/log" }
 	]
 }
