--- a/conf/logpipe_case7_input_file_and_output_ingeek.conf
+++ b/conf/logpipe_case7_input_file_and_output_ingeek.conf
@@ -2,17 +2,17 @@
 	"log" : 
 	{
 		"log_file" : "/tmp/nhx_lhh_logpipe_case7_input_file_and_output_ingeek.log" ,
-		"log_level" : "DEBUG"
+		"log_level" : "INFO"
 	} ,
 	
 	"inputs" : 
 	[
-		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/nhx_lhh/log" }
+		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/nhx_lhh/log" , "min_usleep_interval":10ms , "max_usleep_interval":100ms }
 	] ,
 	
 	"outputs" : 
 	[
-		{ "plugin":"so/logpipe-output-ingeek.so" , "ip":"158.1.0.48" , "port":5142 , "path":"/home/nhx_lhh/log" , "key":"press3" }
-		// { "plugin":"so/logpipe-output-ingeek.so" , "ip":"66.88.1.68" , "port":5142 , "path":"/home/nhx_lhh/log" }
+		// { "plugin":"so/logpipe-output-ingeek.so" , "ip":"158.1.0.48" , "port":5142 , "path":"/home/nhx_lhh/log" , "key":"press3" }
+		{ "plugin":"so/logpipe-output-ingeek.so" , "ip":"66.88.1.68" , "port":5142 , "path":"/home/nhx_lhh/log" }
 	]
 }
