--- a/src-plugins/makefile.Linux
+++ b/src-plugins/makefile.Linux
@@ -12,7 +12,7 @@ MAKEFILE_POSTFIX=.Linux
 AR		=	ar
 AFLAGS		=	rv
 SOFLAGS		=	-shared
-ESOFLAGS	=	
+ESOFLAGS	=	-rdynamic	
 
 # c源代码文件宏及推导规则
 CC		=	gcc -g -fPIC -O2 -Wall -Werror -fno-strict-aliasing
@@ -63,6 +63,7 @@ LFLAGS		=	$(_LFLAGS) \
 			-L$(HOME)/lib \
 			-llogpipe_api \
 			-rdynamic \
+			-lm \
 
 ###### 额外宏定义区
 CLEAN_ADDITION	=	fasterhttp.o \
@@ -72,7 +73,7 @@ CLEAN_ADDITION	=	fasterhttp.o \
 
 ###### 加载mktpl模板库
 # 最终目标列表
-all	:	$(OBJ) $(OBJ2) $(LIB) $(LIB2) $(SQL) $(NOINST_OBJ) $(BIN) $(BIN2)
+all		:	$(OBJ) $(OBJ2) $(LIB) $(LIB2) $(SQL) $(NOINST_OBJ) $(BIN) $(BIN2)
 
 prepro_all	:	$(PREPRO)
 
