--- a/conf/logpipe_case8_input_file_and_filter_and_output_stdout.conf
+++ b/conf/logpipe_case8_input_file_and_filter_and_output_stdout.conf
@@ -8,11 +8,12 @@
 	"inputs" : 
 	[
 		{ "plugin":"so/logpipe-input-file.so" , "path":"/home/nhx_lhh/log" }
+		// { "plugin":"so/logpipe-input-file.so" , "path":"/home/nhx_lhh/log" , "line_mode":1 }
 	] ,
 	
 	"filters" : 
 	[
-		{ "plugin":"so/logpipe-filter-split-line.so" }
+		{ "plugin":"so/logpipe-filter-log.so" }
 	] ,
 	
 	"outputs" : 
